--- a/output/insertar-codigo-latex-en-nuestros-articulos-rst.html
+++ b/output/insertar-codigo-latex-en-nuestros-articulos-rst.html
@@ -41,7 +41,7 @@
 <p>tags: <a href="/tag/latex.html">latex</a> </p>
 </footer><!-- /.post-info -->      <p>Existe la posibilidad de insertar código latex:</p>
 <blockquote>
-<span class="formula"><span class="fraction"><span class="ignored">(</span><span class="numerator">3</span><span class="ignored">)/(</span><span class="denominator">2</span><span class="ignored">)</span></span></span></blockquote>
+<span class="formula"><span class="fraction"><span class="ignored">(</span><span class="numerator">3</span><span class="ignored">)/(</span><span class="denominator">2</span><span class="ignored">)</span></span>⋅<span class="sqrt"><span class="radical">√</span><span class="ignored">(</span><span class="root">12</span><span class="ignored">)</span></span></span></blockquote>
 
     </div><!-- /.entry-content -->
 
