--- a/output/mapas-de-google-para-imprimir-en-3d.html
+++ b/output/mapas-de-google-para-imprimir-en-3d.html
@@ -65,8 +65,7 @@ en <em>Github</em> de <strong>ThatcherC</strong> llamada <strong>Terrain2STL</st
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://twitter.com/es3a10">twitter</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
