--- a/output/authors.html
+++ b/output/authors.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
         <meta charset="utf-8" />
-        <title>Bitácora Personaaaaaaaal - Authors</title>
+        <title>Bitácora Personal - Authors</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
@@ -12,19 +12,20 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Bitácora Personaaaaaaaal </a></h1>
+                <h1><a href="/">Bitácora Personal </a></h1>
                 <nav><ul>
                     <li><a href="/category/3d.html">3D</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li><a href="/category/lyx.html">Lyx</a></li>
+                    <li><a href="/category/maker.html">Maker</a></li>
                     <li><a href="/category/pelican.html">Pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Authors on Bitácora Personaaaaaaaal</h1>
+    <h1>Authors on Bitácora Personal</h1>
     <ul>
-        <li><a href="/author/carlos-rodriguez.html">Carlos Rodríguez</a> (5)</li>
+        <li><a href="/author/carlos-rodriguez.html">Carlos Rodríguez</a> (6)</li>
     </ul>
 </section>
 
