--- a/output/handouts-en-documentos-lyx.html
+++ b/output/handouts-en-documentos-lyx.html
@@ -12,11 +12,12 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Bitácora Personaaaaaaaal </a></h1>
+                <h1><a href="/">Bitácora Personal </a></h1>
                 <nav><ul>
                     <li><a href="/category/3d.html">3D</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li class="active"><a href="/category/lyx.html">Lyx</a></li>
+                    <li><a href="/category/maker.html">Maker</a></li>
                     <li><a href="/category/pelican.html">Pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
