--- a/output/tags.html
+++ b/output/tags.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
         <meta charset="utf-8" />
-        <title>Bitácora Personaaaaaaaal - Tags</title>
+        <title>Bitácora Personal - Tags</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
@@ -12,20 +12,22 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Bitácora Personaaaaaaaal </a></h1>
+                <h1><a href="/">Bitácora Personal </a></h1>
                 <nav><ul>
                     <li><a href="/category/3d.html">3D</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li><a href="/category/lyx.html">Lyx</a></li>
+                    <li><a href="/category/maker.html">Maker</a></li>
                     <li><a href="/category/pelican.html">Pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
-    <h1>Tags for Bitácora Personaaaaaaaal</h1>
+    <h1>Tags for Bitácora Personal</h1>
     <ul>
         <li><a href="/tag/3d.html">3D</a> (1)</li>
         <li><a href="/tag/latex.html">latex</a> (1)</li>
+        <li><a href="/tag/maker.html">Maker</a> (1)</li>
     </ul>
 </section>
 
