--- a/output/archives.html
+++ b/output/archives.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
         <meta charset="utf-8" />
-        <title>Bitácora Personaaaaaaaal</title>
+        <title>Bitácora Personal</title>
         <link rel="stylesheet" href="/theme/css/main.css" />
 
         <!--[if IE]>
@@ -12,18 +12,21 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="/">Bitácora Personaaaaaaaal </a></h1>
+                <h1><a href="/">Bitácora Personal </a></h1>
                 <nav><ul>
                     <li><a href="/category/3d.html">3D</a></li>
                     <li><a href="/category/general.html">General</a></li>
                     <li><a href="/category/lyx.html">Lyx</a></li>
+                    <li><a href="/category/maker.html">Maker</a></li>
                     <li><a href="/category/pelican.html">Pelican</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for Bitácora Personaaaaaaaal</h1>
+<h1>Archives for Bitácora Personal</h1>
 
 <dl>
+    <dt>mar 06 octubre 2015</dt>
+    <dd><a href="/que-vamos-a-hacer-en-el-makespace.html">¿Qué vamos a hacer en el makespace?</a></dd>
     <dt>mar 29 septiembre 2015</dt>
     <dd><a href="/insertar-codigo-latex-en-nuestros-articulos-rst.html">Insertar código latex en nuestros artículos .rst</a></dd>
     <dt>sáb 05 septiembre 2015</dt>
