--- a/output/archives.html
+++ b/output/archives.html
@@ -25,6 +25,10 @@
 <h1>Archives for Bitácora Personal</h1>
 
 <dl>
+    <dt>mar 22 diciembre 2015</dt>
+    <dd><a href="/programas-para-modelar-en-3d.html">Programas para modelar en 3D</a></dd>
+    <dt>mié 07 octubre 2015</dt>
+    <dd><a href="/articulo-para-el-diario-de-navarra.html">Artículo para el diario de Navarra</a></dd>
     <dt>mar 06 octubre 2015</dt>
     <dd><a href="/que-vamos-a-hacer-en-el-makespace.html">¿Qué vamos a hacer en el makespace?</a></dd>
     <dt>mar 29 septiembre 2015</dt>
