--- a/output/articulo-para-el-diario-de-navarra.html
+++ b/output/articulo-para-el-diario-de-navarra.html
@@ -49,11 +49,11 @@ La idea principal del proyecto <em>REPRAP</em> era la construcción de impresora
 <p class="caption">(Probando la impresora)</p>
 </div>
 <div class="figure">
-<img alt="'Impresora completa'" src="./img/impresora_completa.jpg" style="width: 400px;" />
+<img alt="'Impresora completa'" src="./img/impresora_completa.JPG" style="width: 400px;" />
 <p class="caption">(La impresora completa)</p>
 </div>
 <div class="figure">
-<img alt="'Construyendo sólidos'" src="./img/construyendo.jpg" style="width: 400px;" />
+<img alt="'Construyendo sólidos'" src="./img/construyendo.JPG" style="width: 400px;" />
 <p class="caption">(Construyendo sólidos platónicos)</p>
 </div>
 <p>Pero al buscar información en Internet de estas impresoras 3D, vimos que existía detrás una comunidad extremadamente activa cuya principal motivación era la construcción de cosas para aprender. Se trata de una versión moderna de los antiguos aficionados al bricolaje e inventores caseros, pero basados en la tecnología y con la ventaja de utilizar Internet para difundir todo el conocimiento, y por tanto de hacerlo accesible. En EEUU, a este tipo de personas se les llamó makers y pronto aparecieron locales donde socializar, construir y compartir ideas: Fablab o Makespace son los nombres más comunes.</p>
