--- a/output/articulo-para-el-diario-de-navarra.html
+++ b/output/articulo-para-el-diario-de-navarra.html
@@ -45,11 +45,11 @@
 La idea principal del proyecto <em>REPRAP</em> era la construcción de impresoras auto-replicantes, es decir, que están construidas con piezas que hayan sido impresas por otras impresoras.</p>
 <p>Algunas fotos del año pasado:</p>
 <div class="figure align-right">
-<img alt="'Probando la Impresora'" src="./img/probando.jpg" style="width: 400px;" />
+<img alt="'Probando la Impresora'" src="./img/probando.JPG" style="width: 400px;" />
 <p class="caption">(Probando la impresora)</p>
 </div>
 <div class="figure">
-<img alt="'Impresora completa'" src="./img/impresora_completa.JPG" style="width: 400px;" />
+<img alt="'Impresora completa'" src="./img/impresora_completa.jpg" style="width: 400px;" />
 <p class="caption">(La impresora completa)</p>
 </div>
 <div class="figure">
