--- a/output/archives.html
+++ b/output/archives.html
@@ -25,6 +25,8 @@
 <h1>Archives for Bitácora Personal</h1>
 
 <dl>
+    <dt>vie 28 octubre 2016</dt>
+    <dd><a href="/parametros-para-el-calculo-de-pasos-para-un-escornabot.html">Parámetros para el cálculo de pasos para un escornabot</a></dd>
     <dt>mar 22 diciembre 2015</dt>
     <dd><a href="/programas-para-modelar-en-3d.html">Programas para modelar en 3D</a></dd>
     <dt>mié 07 octubre 2015</dt>
